--- a/index.html
+++ b/index.html
@@ -1,322 +1,364 @@
 <!DOCTYPE html>
-<html la^[Фон с анимацией звёзд, создающий ощущение движения через космос.]({"attribution":{"attributableIndex":"425-1"}})" content="width=device-width,initial-scale=1.0"/>
-^[Анимированное изображение бота в центре страницы.]({"attribution":{"attributableIndex":"553-1"}})-- Космический шрифт -->
-  <link href="https:/^[Через 7 секунд появляется скрытое сообщение.]({"attribution":{"attributableIndex":"653-1"}})ght@500;700&display=swap" rel="stylesheet"/>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+  <title>AstroPulse | Переход в бота</title>
+  <!-- Космический шрифт -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet"/>
   <!-- particles.js -->
-^[При нажатии на кнопку происходит анимация перехода.]({"attribution":{"attributableIndex":"743-1"}})es.js@2.0.0/particles.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <style>
-    ^[Элементы интерфейса оформлены в стиле стеклянных панелей с подсветкой.]({"attribution":{"attributableIndex":"863-1"}}) marg^[Вот полный код для `index.html`:]({"attribution":{"attributableIndex":"987-0"}})y {
-      width:100%; height:100%; overflow:hidden;
-      background:#000; color:#fff;
-      font-family:'Orbitron',sans-serif;
-      perspective:1000px;
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
-    a { color:inherit; text-decoration:none; }
 
-    /* ===== Звёздный фон-портал ===== */
+    html, body {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+      background: #000;
+      color: #fff;
+      font-family: 'Orbitron', sans-serif;
+      perspective: 1000px;
+    }
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+
     #particles {
-      position:fixed; top:0; left:0;
-      width:200%; height:200%;
-      background: radial-gradient(circle,#fff 1px,transparent 1px);
-      background-size:50px 50px;
-      animation:moveStars 60s linear infinite;
-      z-index:1;
-      pointer-events: none;
-    }
-    @keyframes moveStars { to { transform:translate(-50%,-50%); } }
-
-    /* ===== Canvas микрогры ===== */
-    #starGame {
-      position:fixed; top:0; left:0;
-      width:100%; height:100%;
-      z-index:2;
-      pointer-events: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle, #fff 1px, transparent 1px);
+      background-size: 50px 50px;
+      animation: moveStars 60s linear infinite;
+      z-index: 1;
     }
 
-    /* ===== Canvas VR-туннеля ===== */
-    #warpTunnel {
-      position:fixed; top:0; left:0;
-      width:100%; height:100%;
-      z-index:3;
-      display:none;
-      pointer-events: none;
+    @keyframes moveStars {
+      to {
+        transform: translate(-50%, -50%);
+      }
     }
 
-    /* ===== Вспышки ===== */
     .flash, .warpFlash {
-      position:fixed; top:0; left:0;
-      width:100%; height:100%;
-      background:#fff; display:none;
-      z-index:5;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #fff;
+      display: none;
+      z-index: 3;
+    }
+
+    .flash {
+      animation: flashIn 0.8s ease-out forwards;
+      display: block;
+    }
+
+    .warpFlash {
+      animation: flashIn 0.6s ease-out forwards;
+    }
+
+    @keyframes flashIn {
+      0% {
+        opacity: 1;
+      }
+
+      80% {
+        opacity: 0;
+      }
+
+      100% {
+        opacity: 0;
+        display: none;
+      }
+    }
+
+    .container {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+      text-align: center;
+      opacity: 0;
+      transform: translateY(20px);
+      animation: showUp 0.8s ease-out 0.8s forwards;
+      transition: transform 0.1s;
+    }
+
+    @keyframes showUp {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .bot {
+      font-size: 120px;
+      margin-bottom: 24px;
+      animation: botBreath 3s ease-in-out infinite, botBlink 5s ease-in-out infinite;
+    }
+
+    @keyframes botBreath {
+      0%, 100% {
+        transform: scale(1);
+      }
+
+      50% {
+        transform: scale(1.05);
+      }
+    }
+
+    @keyframes botBlink {
+      0%, 20%, 50%, 70%, 100% {
+        opacity: 1;
+      }
+
+      25%, 65% {
+        opacity: 0.4;
+      }
+    }
+
+    .instruction {
+      background: rgba(255, 255, 255, 0.05);
+      border: 2px solid #00d1ff;
+      border-radius: 16px;
+      padding: 28px;
+      max-width: 360px;
+      margin-bottom: 20px;
+      box-shadow: 0 0 20px rgba(0, 209, 255, 0.4);
+      animation: glow 3s ease-in-out infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        box-shadow: 0 0 10px rgba(0, 209, 255, 0.2);
+      }
+
+      to {
+        box-shadow: 0 0 30px rgba(0, 209, 255, 0.8);
+      }
+    }
+
+    .instruction p {
+      font-size: 18px;
+      line-height: 1.4;
+      margin: 12px 0;
+    }
+
+    .instruction p b {
+      color: #00d1ff;
+      font-size: 20px;
+    }
+
+    .btn {
+      padding: 14px 36px;
+      font-size: 18px;
+      font-weight: 700;
+      background: rgba(255, 255, 255, 0.1);
+      border: 2px solid #00d1ff;
+      border-radius: 12px;
+      backdrop-filter: blur(12px);
+      box-shadow: 0 0 15px rgba(0, 209, 255, 0.5);
+      transition: transform 0.3s, box-shadow 0.3s;
+      animation: pulse 2s ease-out infinite;
+      margin-bottom: 16px;
+      color: #00d1ff;
+      cursor: pointer;
+    }
+
+    .btn:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 25px rgba(0, 209, 255, 0.8);
+    }
+
+    @keyframes pulse {
+      0% {
+        box-shadow: 0 0 10px rgba(0, 209, 255, 0.4);
+      }
+
+      50% {
+        box-shadow: 0 0 20px rgba(0, 209, 255, 0.7);
+      }
+
+      100% {
+        box-shadow: 0 0 10px rgba(0, 209, 255, 0.4);
+      }
+    }
+
+    .secret {
+      margin-top: 20px;
+      font-size: 16px;
+      color: #ffd700;
+      opacity: 0;
+      transition: opacity 1s;
+    }
+
+    .secret.show {
+      opacity: 1;
+    }
+
+    /* ===== Ввод желания ===== */
+    .wish-block {
+      margin-top: 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    #wishInput {
+      padding: 10px 16px;
+      font-size: 16px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      width: 260px;
+      text-align: center;
+      background: rgba(255,255,255,0.1);
+      color: #fff;
+    }
+
+    #sendWish {
+      padding: 10px 20px;
+      font-size: 15px;
+      font-weight: bold;
+      border: 2px solid #00d1ff;
+      background: rgba(255,255,255,0.05);
+      color: #00d1ff;
+      border-radius: 10px;
+      backdrop-filter: blur(10px);
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .wish-fly {
+      position: fixed;
+      left: 50%;
+      top: 60%;
+      transform: translateX(-50%);
+      font-size: 18px;
+      color: #ffd700;
+      animation: flyUp 2s ease-out forwards;
+      z-index: 10;
       pointer-events: none;
     }
-    .flash { animation:flashIn .8s ease-out forwards; display:block; }
-    .warpFlash { animation:flashIn .6s ease-out forwards; }
-    @keyframes flashIn {
-      0% { opacity:1; } 80% { opacity:0; } 100% { opacity:0; display:none; }
-    }
 
-    /* ===== UI-контейнер ===== */
-    .container {
-      position:relative; z-index:4;
-      display:flex; flex-direction:column;
-      align-items:center; justify-content:center;
-      height:100%; text-align:center;
-      opacity:0; transform:translateY(20px);
-      animation:showUp .8s ease-out .8s forwards;
-      transition:transform .1s;
-    }
-    @keyframes showUp { to { opacity:1; transform:translateY(0); } }
-
-    /* ===== 3D-tilt ===== */
-    .container { will-change:transform; }
-
-    /* ===== Живой бот ===== */
-    .bot {
-      font-size:120px; margin-bottom:24px;
-      animation:botBreath 3s ease-in-out infinite,
-                 botBlink 5s ease-in-out infinite;
-    }
-    @keyframes botBreath { 0%,100%{transform:scale(1);} 50%{transform:scale(1.05);} }
-    @keyframes botBlink  { 0%,20%,50%,70%,100%{opacity:1;} 25%,65%{opacity:0.4;} }
-
-    /* ===== Инструкция ===== */
-    .instruction {
-      background:rgba(255,255,255,0.05);
-      border:2px solid #00d1ff; border-radius:16px;
-      padding:28px; max-width:360px; margin-bottom:20px;
-      box-shadow:0 0 20px rgba(0,209,255,0.4);
-      animation:glow 3s ease-in-out infinite alternate;
-    }
-    @keyframes glow {
-      from{box-shadow:0 0 10px rgba(0,209,255,0.2);}
-      to  {box-shadow:0 0 30px rgba(0,209,255,0.8);}
-    }
-    .instruction p {
-      font-size:18px; line-height:1.4; margin:12px 0;
-    }
-    .instruction p b {
-      color:#00d1ff; font-size:20px;
-    }
-
-    /* ===== Кнопка ===== */
-    .btn {
-      padding:14px 36px; font-size:18px; font-weight:700;
-      background:rgba(255,255,255,0.1);
-      border:2px solid #00d1ff; border-radius:12px;
-      backdrop-filter:blur(12px);
-      box-shadow:0 0 15px rgba(0,209,255,0.5);
-      transition:transform .3s,box-shadow .3s;
-      animation:pulse 2s ease-out infinite;
-      margin-bottom:16px;
-      z-index:4;
-      p^[Вы можете сохранить этот код в файле `index.html` и разместить его на GitHub Pages или любом другом хостинге.]({"attribution":{"attributableIndex":"4309-0"}})5,0.8);
-    }
-    @keyframes pulse {
-      0%{box-shadow:0 0 10px rgba(0,209,255,0.4);}
-      50%{box-shadow:0 0 20px rgba(0,209,255,0.7);}
-      100%{box-shadow:0 0 10px rgba(0,209,255,0.4);}
-    }
-
-    /* ===== Бонусная ссылка ===== */
-    .bonus {
-      margin-top:12px; font-size:16px; color:#ffdd57;
-      opacity:0; transition:opacity .5s;
-      z-index:4;
-      position:relative;
-    }
-    .bonus.show { opacity:1; }
-
-    /* ===== Секретная надпись ===== */
-    .secret {
-      margin-top:20px; font-size:16px; color:#ffd700;
-      opacity:0; transition:opacity 1s;
-      z-index:4; position:relative;
-    }
-    .secret.show { opacity:1; }
-
-    /* ===== Warp-анимация контейнера ===== */
-    .warpCont {
-      animation:warpZoom 1.2s ease-out forwards;
-    }
-    @keyframes warpZoom {
-      0%   { transform:translateY(0) scale(1) rotateX(0) rotateY(0); opacity:1; }
-      70%  { transform:translateY(-50px) scale(1.5) rotateX(10deg) rotateY(10deg); opacity:0.5; }
-      100% { opacity:0; }
+    @keyframes flyUp {
+      0% {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+      }
+      100% {
+        transform: translateX(-50%) translateY(-300px);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- стартовая и warp-вспышка -->
+  <!-- начальная flash -->
   <div class="flash"></div>
+  <!-- warp flash -->
   <div class="warpFlash" id="warpFlash"></div>
 
-  <!-- звёздный фон и canvas-игры -->
+  <!-- звёздный фон -->
   <div id="particles"></div>
-  <canvas id="warpTunnel"></canvas>
-  <canvas id="starGame"></canvas>
 
-  <!-- UI-контейнер -->
+  <!-- контент -->
   <div class="container tilt" id="container">
     <div class="bot">🤖</div>
+
     <div class="instruction">
       <p><b>Внимание!</b> TikTok блокирует переход в Telegram.</p>
-      <p>Чтобы открыть ссылку:</p>
+      <p>Чтобы всё работало:</p>
       <p>• Нажми <b>•••</b> (правый верхний угол)</p>
       <p>• Выбери <b>«Открыть в браузере»</b></p>
       <p>• И только потом нажми кнопку</p>
     </div>
+
     <a href="https://t.me/astropulsereal_bot" class="btn" id="goBtn">Перейти в бот</a>
-    <div class="bonus" id="bonus">
-      🎁 Бонус: <a href="https://t.me/astropulsereal_bot?start=bonus" style="color:#ffdd57;">секретная команда</a>
+
+    <!-- блок желания -->
+    <div class="wish-block" id="wishBlock">
+      <input type="text" id="wishInput" placeholder="Загадай желание..." maxlength="100"/>
+      <button id="sendWish">Отправить во Вселенную</button>
     </div>
-    <div class="secret" id="secret">
-      Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждали тебя.
-    </div>
+
+    <div class="secret" id="secret">Ты — один из тех, кто чувствует вибрации Вселенной. Мы ждём тебя.</div>
   </div>
 
   <script>
-  // 1) particles.js
-  particlesJS('particles', {
-    particles: {
-      number:{value:200,density:{enable:true,value_area:800}},
-      color:{value:'#ffffff'},
-      shape:{type:'circle'},
-      opacity:{value:0.8,random:true},
-      size:{value:4,random:true},
-      move:{enable:true,speed:1.2,direction:'center',out_mode:'out'}
-    },
-    interactivity:{detect_on:'canvas',events:{onhover:{enable:false},onclick:{enable:false}}},
-    retina_detect:true
-  });
-
-  // 2) Настройка микрогры “поймай падающую звезду”
-  const sg = document.getElementById('starGame'),
-        sctx = sg.getContext('2d');
-  let stars = [];
-  function resizeGame() {
-    sg.width = innerWidth;
-    sg.height = innerHeight;
-  }
-  window.addEventListener('resize', resizeGame);
-  resizeGame();
-  class FallingStar {
-    constructor() {
-      this.x = Math.random()*innerWidth;
-      this.y = -20;
-      this.size = 8 + Math.random()*8;
-      this.speed = 2 + Math.random()*3;
-    }
-    update() { this.y += this.speed; }
-    draw() {
-      sctx.fillStyle = '#ffdd57';
-      sctx.beginPath();
-      sctx.moveTo(this.x, this.y);
-      for (let i=0; i<5; i++) {
-        sctx.lineTo(
-          this.x + this.size*Math.cos((18+72*i)*Math.PI/180),
-          this.y + this.size*Math.sin((18+72*i)*Math.PI/180)
-        );
-        sctx.lineTo(
-          this.x + this.size/2*Math.cos((54+72*i)*Math.PI/180),
-          this.y + this.size/2*Math.sin((54+72*i)*Math.PI/180)
-        );
-      }
-      sctx.closePath();
-      sctx.fill();
-    }
-  }
-  setInterval(()=> stars.push(new FallingStar()), 800);
-  function animateGame() {
-    sctx.clearRect(0,0,sg.width,sg.height);
-    stars.forEach((st,i)=> {
-      st.update();
-      st.draw();
-      if (st.y > innerHeight+30) stars.splice(i,1);
+    // particles.js
+    particlesJS('particles', {
+      particles: {
+        number:{value:200,density:{enable:true,value_area:800}},
+        color:{value:'#ffffff'},
+        shape:{type:'circle'},
+        opacity:{value:0.8,random:true},
+        size:{value:4,random:true},
+        line_linked:{enable:true,distance:150,color:'#444',opacity:0.4,width:1},
+        move:{enable:true,speed:1.2,direction:'center',out_mode:'out'}
+      },
+      interactivity:{detect_on:'canvas',events:{onhover:{enable:false},onclick:{enable:false}}},
+      retina_detect:true
     });
-    requestAnimationFrame(animateGame);
-  }
-  animateGame();
-  // ловим по pointerdown
-  window.addEventListener('pointerdown', e=>{
-    const x = e.clientX, y = e.clientY;
-    stars.forEach((st,i)=>{
-      if (Math.hypot(x-st.x, y-st.y) < st.size) {
-        stars.splice(i,1);
-        document.getElementById('bonus').classList.add('show');
-      }
+
+    // показать секрет через 7 сек
+    window.addEventListener('load',()=>{
+      setTimeout(()=>{
+        document.getElementById('secret').classList.add('show');
+      },7000);
     });
-  });
 
-  // 3) Скрытая надпись через 7с
-  window.addEventListener('load', ()=> {
-    setTimeout(()=> document.getElementById('secret').classList.add('show'), 7000);
-  });
-
-  // 4) VR-туннель
-  const wt = document.getElementById('warpTunnel'),
-        wctx = wt.getContext('2d');
-  let tunnel = [];
-  function resizeTunnel() {
-    wt.width = innerWidth;
-    wt.height = innerHeight;
-  }
-  window.addEventListener('resize', resizeTunnel);
-  resizeTunnel();
-  function initTunnel() {
-    tunnel = Array.from({length:400}, ()=>({ z:Math.random()*innerWidth }));
-  }
-  function drawTunnel() {
-    wctx.fillStyle = 'rgba(0,0,0,0.2)';
-    wctx.fillRect(0,0,wt.width,wt.height);
-    tunnel.forEach(p=>{
-      p.z -= 8;
-      if (p.z <= 0) p.z = innerWidth;
-      const sx = (Math.random()-0.5)*(wt.width*(1-p.z/innerWidth)) + wt.width/2;
-      const sy = (Math.random()-0.5)*(wt.height*(1-p.z/innerWidth)) + wt.height/2;
-      const r = (1 - p.z/innerWidth)*4;
-      wctx.fillStyle = '#fff';
-      wctx.beginPath();
-      wctx.arc(sx, sy, r, 0, Math.PI*2);
-      wctx.fill();
+    // Warp + редирект
+    document.getElementById('goBtn').addEventListener('click',e=>{
+      e.preventDefault();
+      document.getElementById('warpFlash').style.display='block';
+      document.getElementById('particles').style.animationDuration='0.5s';
+      document.getElementById('container').classList.add('warpCont');
+      setTimeout(()=> location.href=e.target.href, 1200);
     });
-  }
-  function animateTunnel(){
-    drawTunnel();
-    requestAnimationFrame(animateTunnel);
-  }
-  initTunnel();
 
-  // 5) Перейти в бот + warp + редирект
-  document.getElementById('goBtn').addEventListener('click', e=>{
-    e.preventDefault();
-    // остановить игру
-    sg.style.display = 'none';
-    // запускаем вторую вспышку
-    document.getElementById('warpFlash').style.display='block';
-    // ускоряем фон
-    document.getElementById('particles').style.animationDuration='0.5s';
-    // запускаем туннель
-    wt.style.display = 'block';
-    animateTunnel();
-    // warp-анимация UI
-    document.getElementById('container').classList.add('warpCont');
-    // редирект
-    setTimeout(()=> location.href = e.target.href, 1400);
-  });
+    // 3D Tilt
+    const cont=document.getElementById('container');
+    window.addEventListener('mousemove',e=>{
+      const x=(e.clientX-innerWidth/2)/(innerWidth/2),
+            y=(e.clientY-innerHeight/2)/(innerHeight/2);
+      cont.style.transform=`translateY(0) rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
+    });
+    window.addEventListener('mouseleave',()=>cont.style.transform='translateY(0) rotateY(0) rotateX(0)');
 
-  // 6) 3D-tilt
-  const cont = document.getElementById('container');
-  window.addEventListener('mousemove', e=>{
-    const x = (e.clientX - innerWidth/2)/(innerWidth/2),
-          y = (e.clientY - innerHeight/2)/(innerHeight/2);
-    cont.style.transform = `rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
-  });
-  window.addEventListener('deviceorientation', e=>{
-    const x = e.gamma/45, y = e.beta/45;
-    cont.style.transform = `rotateY(${x*5}deg) rotateX(${-y*5}deg)`;
-  });
+    // желание
+    const sendWishBtn = document.getElementById('sendWish');
+    const input = document.getElementById('wishInput');
+    sendWishBtn.addEventListener('click', () => {
+      const text = input.value.trim();
+      if (!text) return;
+
+      const span = document.createElement('div');
+      span.className = 'wish-fly';
+      span.textContent = text;
+      document.body.appendChild(span);
+      input.value = '';
+
+      setTimeout(() => {
+        span.remove();
+      }, 2000);
+    });
   </script>
 </body>
 </html>
